crates/ars-components/src/navigation/accordion/snapshots/ars_components__navigation__accordion__tests__accordion_content_closed.snap
---
source: crates/ars-components/src/navigation/accordion/mod.rs
expression: "snapshot_attrs(&api.item_content_attrs(&key(\"b\")))"
---
aria-labelledby=accordion-trigger-s-62
data-ars-part=item-content
data-ars-scope=accordion
data-ars-state=closed
hidden=until-found
id=accordion-content-s-62
role=region
