crates/ars-components/src/navigation/accordion/snapshots/ars_components__navigation__accordion__tests__accordion_content_open.snap
---
source: crates/ars-components/src/navigation/accordion/mod.rs
expression: "snapshot_attrs(&api.item_content_attrs(&key(\"a\")))"
---
aria-labelledby=accordion-trigger-s-61
data-ars-part=item-content
data-ars-scope=accordion
data-ars-state=open
id=accordion-content-s-61
role=region
