crates/ars-components/src/navigation/accordion/snapshots/ars_components__navigation__accordion__tests__accordion_indicator_open.snap
---
source: crates/ars-components/src/navigation/accordion/mod.rs
expression: "snapshot_attrs(&api.item_indicator_attrs(&key(\"a\")))"
---
aria-hidden=true
data-ars-part=item-indicator
data-ars-scope=accordion
data-ars-state=open
