crates/ars-components/src/navigation/accordion/snapshots/ars_components__navigation__accordion__tests__accordion_item_closed.snap
---
source: crates/ars-components/src/navigation/accordion/mod.rs
expression: "snapshot_attrs(&api.item_attrs(&key(\"b\")))"
---
data-ars-part=item
data-ars-scope=accordion
data-ars-state=closed
