crates/ars-components/src/navigation/accordion/snapshots/ars_components__navigation__accordion__tests__accordion_root_disabled.snap
---
source: crates/ars-components/src/navigation/accordion/mod.rs
expression: "snapshot_attrs(&service(props().disabled(true)).connect(&|_| {}).root_attrs())"
---
data-ars-disabled=true
data-ars-orientation=vertical
data-ars-part=root
data-ars-scope=accordion
dir=ltr
