crates/ars-components/src/navigation/accordion/snapshots/ars_components__navigation__accordion__tests__accordion_root_multiple.snap
---
source: crates/ars-components/src/navigation/accordion/mod.rs
expression: "snapshot_attrs(&service(props().multiple(true).dir(Direction::Rtl)).connect(&|_|\n{}).root_attrs())"
---
data-ars-orientation=vertical
data-ars-part=root
data-ars-scope=accordion
dir=rtl
